syntax = "proto3";

option csharp_namespace = "gRPCIntercommunicationService.Protos";

import "google/protobuf/empty.proto";


service Auth
{ 

	rpc CreateAuthAccount(CreateAuthAccountRequest) returns (CreateAuthAccountResponse);
	rpc RefreshLongLivedToken(RefreshLongLivedTokenRequest) returns(RefreshLongLivedTokenResponse);
	rpc RefreshShortLivedToken(RefreshShortLivedTokenRequest) returns(RefreshShortLivedTokenResponse);
	rpc RevokeLongLivedToken(RevokeLongLivedTokenRequest) returns(RevokeLongLivedTokenResponse);
	rpc Login(LoginRequest) returns (LoginResponse);
	rpc ReinstantiateAuthKey(ReinstateAuthKeyRequest) returns (ReinstateAuthKeyResponse);
	rpc SilentTokenCycle(SilentShortLivedTokenRefreshRequest) returns (SilentShortLivedTokenRefreshResponse);

	rpc StreamAuthCreationsToVaultApi(StreamAuthCreationsToVaultsRequest) returns (stream StreamAuthCreationsToVaultsResponse);
	rpc StreamAuthKeyUpdatesToVaultApi(StreamAuthUpdatesToVaultsRequest) returns (stream StreamAuthUpdatesToVaultsResponse);
	
}

message CreateAuthAccountRequest
{ 
	string AccountId = 1;
}

message CreateAuthAccountResponse
{ 
	string AccountId = 1; 
	bool Successful = 2;
	string ShortLivedToken = 3; 
	string LongLivedToken = 4;
	string Details = 5;
}

message RefreshLongLivedTokenRequest
{ 
	string AccountId = 1;
}

message RefreshLongLivedTokenResponse
{ 
	string AccountId = 1; 
	string RefreshedToken = 2;
	bool Successful = 3;
}

message RefreshShortLivedTokenRequest
{ 
	string AccountId = 1; 
	
}

message RefreshShortLivedTokenResponse
{ 
	string AccountId = 1; 
	string RefreshedToken = 2;
	bool Successful = 3;
}

message RevokeLongLivedTokenRequest
{ 
	string accountId = 1; 
}

message RevokeLongLivedTokenResponse
{ 
	string accountId = 1; 
	bool Successful = 2;
}

message LoginRequest
{ 
	string Username = 1; 
	string Password = 2;
}

message LoginResponse
{ 
	string Username = 1; 
	string AccountId = 2; 
	bool Successful = 3; 
}

message ReinstateAuthKeyRequest
{ 
	string AccountId = 1;
}

message ReinstateAuthKeyResponse
{ 
	string AccountId = 1; 
	string ShortLivedKey = 2;
	string LongLivedKey = 3; 
	bool Successful = 4;
}

message SilentShortLivedTokenRefreshRequest
{ 

}

message SilentShortLivedTokenRefreshResponse
{ 
	string RefreshedShortLivedToken = 1;
	bool Successful = 2;
}

message StreamAuthCreationsToVaultsRequest
{ 

}

message StreamAuthCreationsToVaultsResponse
{ 
	string AuthKey = 1; 
	string AccountId = 2; 
	string ShortLivedKey = 3; 
	string LongLivedKey = 4;
}

message StreamAuthUpdatesToVaultsRequest
{ 

}

message StreamAuthUpdatesToVaultsResponse
{ 
	string AccountId = 1;
	optional string ShortLivedKey = 2; 
	optional string LongLivedKey = 3;
	UpdateType UpdateType = 4;
}

enum UpdateType
{ 
	ShortLivedUpdate = 0;
	LongLivedUpdate = 1;
}
